<resources>
    <string name="app_name">Giickos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder">Placeholder</string>
    <string name="missing_string">MISSING STRING</string>
    <string name="giickos_contact_email">giickossc@gmail.com</string>
    <string name="giickos_website">https://giickos.blogspot.com/2023/05/giickos.html</string>
    <string name="generic_label_delete">Delete</string>
    <string name="generic_label_username">Username</string>
    <string name="generic_label_email">E-mail</string>
    <string name="generic_label_create">Create</string>
    <string name="generic_label_save">Save</string>
    <string name="generic_label_yes">Yes</string>
    <string name="generic_label_no">No</string>
    <string name="generic_label_week">Week</string>
    <string name="generic_label_month">Month</string>
    <string name="generic_label_year">Year</string>
    <string name="generic_label_none">None</string>
    <string name="generic_label_name">Name</string>
    <string name="generic_label_ok">Ok</string>
    <string name="generic_label_close">Close</string>
    <string name="generic_label_go">Go</string>
    <string name="generic_label_confirm">Confirm</string>
    <string name="generic_label_notavailable">N/A</string>
    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>
    <string name="auth_login_success">Successfully logged in</string>
    <string name="auth_login_failure">Failed to log in</string>
    <string name="auth_msg_recoverpassword_title">Enter your e-mail</string>
    <string name="auth_msg_recoverpassword_success">Recovery e-mail sent</string>
    <string name="auth_msg_recoverpassword_body">An e-mail with account recovery instructions has been sent to the address.</string>
    <string name="subscription_inactive">Not subscribed</string>
    <string name="subscription_active">Subscribed</string>
    <string name="subscription_inapplicable">Please log in first.</string>
    <string name="task_priority_none">@string/generic_label_none</string>
    <string name="task_priority_low">Low</string>
    <string name="task_priority_medium">Medium</string>
    <string name="task_priority_high">High</string>
    <string name="task_repeatmode_none">Don\'t repeat</string>
    <string name="task_repeatmode_daily">Daily</string>
    <string name="task_repeatmode_weekly">Weekly</string>
    <string name="taskexplorer_name">Projects &amp; Tasks</string>
    <string name="taskexplorer_help">The projects &amp; tasks screen shows your projects and tasks. Tap on projects to expand or hide their lists of tasks. Tap on a task to edit it. Long-press on a project to delete it.</string>
    <string name="taskexplorer_label_addtask">Add Task</string>
    <string name="taskexplorer_label_addproject">New Project</string>
    <string name="taskexplorer_msg_addproject_success">Project created</string>
    <string name="taskexplorer_msg_addproject_error">Error creating project</string>
    <string name="taskexplorer_msg_deleteproject_title">Delete Project</string>
    <string name="taskexplorer_msg_deleteproject_body">Are you sure you want to delete the project \'%s\' and all of its tasks?</string>
    <string name="taskexplorer_msg_deleteproject_success">Project deleted</string>
    <string name="taskexplorer_msg_deleteproject_error">Error while deleting project</string>
    <string name="taskcreator_name">Task Creator</string>
    <string name="taskcreator_help">The task creator is where you can create or edit tasks by filling out various fields. Only the name field is mandatory.</string>
    <string name="taskcreator_label_project">Project:</string>
    <string name="taskcreator_label_title">Title:</string>
    <string name="taskcreator_label_date">Start Date:</string>
    <string name="taskcreator_label_priority">Priority:</string>
    <string name="taskcreator_label_time_start">Start Time:</string>
    <string name="taskcreator_label_time_end">End Time:</string>
    <string name="taskcreator_label_duration">Duration:</string>
    <string name="taskcreator_label_duration_field">minutes</string>
    <string name="taskcreator_label_time_repeat">Repeat Task:</string>
    <string name="taskcreator_label_settime">Tap to set...</string>
    <string name="taskcreator_label_details">Details</string>
    <string name="taskcreator_label_complete">Complete on %s</string>
    <string name="taskcreator_msg_creation_success">Task created</string>
    <string name="taskcreator_msg_creation_error">Error while creating task</string>
    <string name="taskcreator_msg_update_success">Task updated</string>
    <string name="taskcreator_msg_update_error">Error while updating task</string>
    <string name="taskcreator_msg_delete_title">Delete Task</string>
    <string name="taskcreator_msg_delete_body">Are you sure you want to delete this task?</string>
    <string name="taskcreator_msg_deleted_success">Task deleted</string>
    <string name="taskcreator_msg_deleted_error">Failed to delete task</string>
    <string name="miscellaneous_name">Settings and More</string>
    <string name="miscellaneous_help">Here you can change the application\'s settings, view your usage statistics and manage your Giickos Plus subscription and teams.</string>
    <string name="miscellaneous_tab_settings">Settings</string>
    <string name="miscellaneous_tab_settings_notifications">Notifications</string>
    <string name="miscellaneous_tab_settings_feedback">Send Feedback</string>
    <string name="miscellaneous_tab_settings_about">About us</string>
    <string name="miscellaneous_tab_settings_change_account">Change Account</string>
    <string name="miscellaneous_tab_settings_logout">Log Out</string>
    <string name="miscellaneous_tab_settings_delete_account">Delete Account</string>
    <string name="miscellaneous_tab_settings_login">Log In</string>
    <string name="miscellaneous_tab_settings_giickos_plus">Giickos Plus:</string>
    <string name="miscellaneous_tab_settings_notloggedin">Not logged in</string>
    <string name="miscellaneous_tab_settings_msg_logout_title">Log Out</string>
    <string name="miscellaneous_tab_settings_msg_logout_body">Are you sure you want to log out from your account?</string>
    <string name="miscellaneous_tab_settings_msg_deleteaccount_title">Delete Account</string>
    <string name="miscellaneous_tab_settings_msg_deleteaccount_body">Are you sure you want to delete your account? This action is irreversible.</string>
    <string name="miscellaneous_tab_settings_msg_deleteaccount_success">Your account has been successfully deleted.</string>
    <string name="miscellaneous_tab_settings_msg_deleteaccount_error">Failed to delete account. Check your connection or contact support.</string>
    <string name="miscellaneous_tab_settings_msg_no_email_app">No email app found</string>
    <string name="miscellaneous_tab_settings_msg_no_browser_app">No browser app found</string>
    <string name="miscellaneous_tab_settings_feedback_subject">Feedback of Giickos application</string>
    <string name="miscellaneous_tab_teams">Teams</string>
    <string name="miscellaneous_tab_statistics">Statistics</string>
    <string name="statistics_label" />
    <string name="statistics_value" />
    <string name="statistics_text_button_today">Today</string>
    <string name="statistics_date_start">Start date</string>
    <string name="statistics_date_end">End date</string>
    <string name="statistics_tasks_created">Tasks Created</string>
    <string name="statistics_tasks_completed">Tasks Completed</string>
    <string name="statistics_timer_time">Pomodoro Time</string>
    <string name="statistics_timer_detoxtime">Screen Detox Time</string>
    <string name="statistics_bamboo_planted">Bamboo Watered</string>
    <string name="statistics_bamboo_collected">Bamboo Collected</string>
    <string name="giickos_settings_offer">By purchasing Giickos plus you unlock:\n\n-Teams: Create a team, and share tasks with your team members.\n\n-Other features coming soon!\n
    </string>
    <string name="giickos_plus_purchasable">Purchase for 5.00€/month</string>
    <string name="timer_name">Timer &amp; Detox</string>
    <string name="timer_help">Here you can set a timer to track the amount of time spent working on a task. You may also configure it to work as a pomodoro timer, and enable various \'detox\' options to reduce distractions from your phone.</string>
    <string name="timer_tab_detox">Detox</string>
    <string name="timer_tab_detox_subtitle">Disable distractions from your phone to focus on your tasks\nThese options will apply while using the detox option in the timer.</string>
    <string name="timer_option_blockcalls">Block calls</string>
    <string name="timer_option_blocknotifications">Block notifications</string>
    <string name="timer_option_blockapps">Block other apps</string>
    <string name="timer_tab_timer">Pomodoro</string>
    <string name="timer_notask">No task selected</string>
    <string name="select_task_prompt">Select a task</string>
    <string name="calendar_name">Calendar</string>
    <string name="calendar_help">The calendar shows you the tasks you have planned for each day. You may tap a task to view it and edit it, or tap an empty space to create a new task on the chosen date and time.</string>
    <string name="detox_all_apps_locked">All apps locked</string>
    <string name="detox_no_notification">No notification</string>
    <string name="detox_emergency_calls">Only emergency calls</string>
    <string name="detox_let_your_phone_down">Let your phone down</string>
    <string name="calendar_msg_noprojects_title">No Projects</string>
    <string name="calendar_msg_noprojects_body">You must create a project to add tasks. Select \"New Project\" in the Task Explorer to get started.</string>
    <string name="bamboo_name">Bamboo garden</string>
    <string name="bamboo_help">
        Plant a bamboo with a growth time, goals, steps, obstacles, benefits and a letter for the future you. Once the bamboo is planted, you can
        view the info by tapping on it, but you can\'t see the letter. The letter is only visible when the bamboo is fully grown and harvested to the storage.
        In order to make it grow, you can water it once a day. Watering represents you have achieved your goals for the day.
    </string>
    <string name="bamboo_garden_tab">Garden</string>
    <string name="bamboo_storage_tab">Storage</string>
    <string name="bamboo_form_title">Title...</string>
    <string name="bamboo_question_1">Objectives, new habits, remove bad habits. (No more than 3 tasks; they must be measurable)</string>
    <string name="bamboo_question_2">Steps to achieve your objectives? (Be specific)</string>
    <string name="bamboo_question_3">Obstacles that you will face and how will you react?</string>
    <string name="bamboo_question_4">Benefits of achieving your objectives?</string>
    <string name="bamboo_question_letter">Letter for the future you:</string>
    <string name="bamboo_garden_warning"> You haven\'t collected any bamboo yet</string>
    <string name="bamboo_growthtime_3days">3 Days</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">Register</string>
    <string name="text_find_psw">Forgot password?</string>
    <string name="click_here">click here</string>
    <string name="guest">Enter as guest</string>
</resources>