<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|left"
    android:orientation="vertical"
    android:paddingHorizontal="5dp"
    tools:context=".ui.activities.login.LoginActivity"
    android:id="@+id/login">

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#356003"
        android:textSize="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/card_email"
            android:name="edu.ub.pis.giickos.ui.generic.form.FormCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_card_form" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/card_password"
            android:name="edu.ub.pis.giickos.ui.generic.form.FormCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout="@layout/fragment_card_form" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/checkbox_login"
        android:name="edu.ub.pis.giickos.ui.login.CheckboxLoginFragment"
        android:layout_width="match_parent"
        android:layout_height="91dp"

        tools:layout="@layout/fragment_checkbox_label_login">
    </androidx.fragment.app.FragmentContainerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_in_login"
            android:text="@string/action_sign_in_short"
            android:layout_marginRight="20dp"
            >
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_login"
            android:text="@string/register"
            android:layout_marginLeft="20dp"

            >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="0"
            android:text="@string/text_find_psw" />

        <TextView
            android:id="@+id/label_recoverpasswordlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/click_here"
            android:textColor="@color/link" />
    </LinearLayout>

    <Button
        android:id="@+id/guest_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guest"
        android:visibility="gone"
        tools:visibility="gone"></Button>
</LinearLayout>


