<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.section.timer.detox.DetoxFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_detox_phone_down"
            android:layout_width="match_parent"
            android:layout_height="139dp"
            android:gravity="center"
            android:text="@string/detox_let_your_phone_down" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="211dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_emergency_calls"
                        android:layout_width="match_parent"
                        android:layout_height="131dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/detox_emergency_calls" />

                    <Switch
                        android:id="@+id/switch_emergency_calls"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_no_notification"
                        android:layout_width="match_parent"
                        android:layout_height="128dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/detox_no_notification" />

                    <Switch
                        android:id="@+id/switch_no_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_all_locked"
                        android:layout_width="match_parent"
                        android:layout_height="132dp"
                        android:layout_weight="1"
                        android:gravity="center|clip_vertical"
                        android:text="@string/detox_all_apps_locked" />

                    <Switch
                        android:id="@+id/switch_all_apps_locked"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center" />
                </LinearLayout>

            </LinearLayout>

        </TableRow>

    </LinearLayout>

</FrameLayout>