<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.section.miscellaneous.statistics.StatisticsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/Top_Line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp">

                <Button
                    android:id="@+id/statistics_today_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/statistics_text_button_today" />

                <EditText
                    android:id="@+id/statistics_start_range_date"
                    android:layout_width="104dp"
                    android:layout_height="56dp"
                    android:ems="10"
                    android:inputType="date"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@string/statistics_date_start" />

                <EditText
                    android:id="@+id/statistics_end_range_date"
                    android:layout_width="104dp"
                    android:layout_height="56dp"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:text="@string/statistics_date_end" />
            </TableRow>

            <TableRow
                android:id="@+id/First_Line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_vertical"
                android:gravity="center"
                android:measureWithLargestChild="false"
                android:orientation="vertical"
                android:showDividers="middle" />

            <TableRow
                android:id="@+id/Second_Line"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_vertical"
                android:orientation="vertical" >

            </TableRow>

        </TableLayout>

    </LinearLayout>

</FrameLayout>